--- a/bo1_analysis.ipynb
+++ b/bo1_analysis.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "7     7   500      3              1     1100  2.93"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "30     7       2  0.05      9"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,135 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>wins</th>\n",
-       "      <th>losses</th>\n",
-       "      <th>pdf</th>\n",
-       "      <th>games</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.125000</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.187500</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.187500</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.156250</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.117188</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.082031</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.054688</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.007812</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.027344</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.054688</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    wins  losses       pdf  games\n",
-       "3      0       3  0.125000      3\n",
-       "7      1       3  0.187500      4\n",
-       "11     2       3  0.187500      5\n",
-       "15     3       3  0.156250      6\n",
-       "19     4       3  0.117188      7\n",
-       "23     5       3  0.082031      8\n",
-       "27     6       3  0.054688      9\n",
-       "28     7       0  0.007812      7\n",
-       "29     7       1  0.027344      8\n",
-       "30     7       2  0.054688      9"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -534,14 +406,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/54/5dpgyh313k36rflz4hwnw0y80000gn/T/ipykernel_21897/3546934663.py:8: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/var/folders/54/5dpgyh313k36rflz4hwnw0y80000gn/T/ipykernel_46380/1014408179.py:6: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  ).groupby(\"win_rate\").apply(\n"
      ]
     },
@@ -610,14 +482,12 @@
        "0.6                   37.26  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from statsmodels.stats.weightstats import DescrStatsW\n",
-    "\n",
     "get_event_pdf(0.6).merge(df_rewards, how=\"left\", on=\"wins\").assign(\n",
     "    gems_per_game=lambda df: df.gems / df.games,\n",
     "    profit=lambda df: df.eq_gems - ENTRY_FEE,\n",
@@ -626,13 +496,13 @@
     ").groupby(\"win_rate\").apply(\n",
     "    lambda x: pd.Series(\n",
     "        {\n",
-    "            \"avg_wins\": DescrStatsW(x[\"wins\"], weights=x[\"pdf\"]).mean,\n",
-    "            \"avg_games\": DescrStatsW(x[\"games\"], weights=x[\"pdf\"]).mean,\n",
-    "            \"avg_gems\": DescrStatsW(x[\"gems\"], weights=x[\"pdf\"]).mean,\n",
-    "            \"avg_packs\": DescrStatsW(x[\"packs\"], weights=x[\"pdf\"]).mean,\n",
-    "            \"avg_eq_gems\": DescrStatsW(x[\"eq_gems\"], weights=x[\"pdf\"]).mean,\n",
-    "            \"avg_profit\": DescrStatsW(x[\"profit\"], weights=x[\"pdf\"]).mean,\n",
-    "            \"avg_gems_per_game\": DescrStatsW(x[\"gems_per_game\"], weights=x[\"pdf\"]).mean,\n",
+    "            \"avg_wins\": (x[\"wins\"] * x[\"pdf\"]).sum(),\n",
+    "            \"avg_games\": (x[\"games\"] * x[\"pdf\"]).sum(),\n",
+    "            \"avg_gems\": (x[\"gems\"] * x[\"pdf\"]).sum(),\n",
+    "            \"avg_packs\": (x[\"packs\"] * x[\"pdf\"]).sum(),\n",
+    "            \"avg_eq_gems\": (x[\"eq_gems\"] * x[\"pdf\"]).sum(),\n",
+    "            \"avg_profit\": (x[\"profit\"] * x[\"pdf\"]).sum(),\n",
+    "            \"avg_gems_per_game\": (x[\"gems_per_game\"] * x[\"pdf\"]).sum(),\n",
     "        }\n",
     "    )\n",
     ").round(\n",
@@ -642,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +709,7 @@
        "9          55.56  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,16 +759,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x143810460>"
+       "<matplotlib.legend.Legend at 0x1631541f0>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
